--- a/cloudsql/controller.yml
+++ b/cloudsql/controller.yml
@@ -5,7 +5,7 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: cloudsql-rc
+  name: cloudsql
 spec:
   replicas: 1
   template:
@@ -27,10 +27,10 @@ spec:
       - image: gcr.io/cloudsql-docker/gce-proxy:1.09
         name: cloudsql
         command:
-          - "/cloud_sql_proxy"
-          - "--dir=/cloudsql"
-          - "-instances=[soon-fm-production:europe-west1:prod]=tcp:5432"
-          - "-credential_file=/secrets/cloudsql/credentials.json"
+          - /cloud_sql_proxy
+          - --dir=/cloudsql
+          - -instances=soon-fm-production:europe-west1:prod=tcp:0.0.0.0:5432
+          - -credential_file=/secrets/cloudsql/credentials.json
         ports:
           - name: cloudsql-port
             containerPort: 5432
